--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <main>
     <div class="result-summary">
       <div class="result" data-spacing="large">
-        <h4 class="section-title">Your Result </h4>
+        <!-- <h3 class="section-title">Your Result </h3> -->
+        <h3 class="section-title">Your Result</h3>
 
         <p class="result-score">
           <span>76</span> of 100
